--- a/Phase-1 [Infra Setup]/1. Create VMs in AWS.md
+++ b/Phase-1 [Infra Setup]/1. Create VMs in AWS.md
@@ -34,7 +34,9 @@ To create an Ubuntu EC2 instance in AWS, follow these steps:
 
 9. **Configure Security Group**:
    - Configure Security Group" section, configure the security group to allow SSH access (port 22) from your IP address.
-   - You may also want to allow other ports based on your requirements (e.g., HTTP, HTTPS) as in this pic ![Alt text] https://github.com/sachinbasyal/Cloud-DevOps-RoadMap/blob/main/DevOps%20RoadMap.png
+   - You may also want to allow other ports based on your requirements (e.g., HTTP, HTTPS) as in this pic 
+   
+   ![Alt text](https://github.com/sachinbasyal/Cloud-DevOps-RoadMap/blob/main/Phase-1%20%5BInfra%20Setup%5D/Security%20Group%20-Ports.png?raw=true)
    - Click "Review and Launch".
 
 10. **Review and Launch**:
